--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,218 @@
-Flask
-bcrypt
+adam_atan2==0.0.3
+aiofiles==24.1.0
+aiosqlite==0.21.0
+altgraph==0.17.4
+annotated-types==0.7.0
+antlr4-python3-runtime==4.9.3
+anyio==4.9.0
+argdantic==1.3.3
+asgiref==3.9.1
+attrs==25.4.0
+auto-py-to-exe==2.48.1
+babel==2.17.0
+backports.functools-lru-cache==2.0.0
+bcrypt==4.3.0
+blinker==1.9.0
+bottle==0.13.4
+bottle-websocket==0.2.9
+cachetools==5.5.2
+certifi==2025.11.12
+cffi==2.0.0
+charset-normalizer==3.4.2
+click==8.2.1
+colorama==0.4.6
+colorlog==6.9.0
+contourpy==1.3.2
+coolname==2.2.0
+ctkchart==2.1.9
+CTkMenuBar==0.8
+CTkMessagebox==2.7
+CTkTable==1.1
+customtkinter==5.2.2
+cycler==0.12.1
+darkdetect==0.8.0
+decorator==5.2.1
+Deprecated==1.3.1
+deprecation==2.1.0
+dnspython==2.8.0
+docopt==0.6.2
+dropbox==12.0.2
+Eel==0.18.2
+einops==0.8.1
+email-validator==2.3.0
+et_xmlfile==2.0.0
+exceptiongroup==1.3.0
+fastapi==0.116.1
+fastjsonschema==2.21.2
+filelock==3.13.1
+fire==0.7.0
+Flask==3.1.2
+fonttools==4.59.0
+fpdf==1.7.2
+fsspec==2024.6.1
+future==1.0.0
+gevent==25.9.1
+gevent-websocket==0.10.1
+gitdb==4.0.12
+GitPython==3.1.45
+google-api-core==2.25.1
+google-api-python-client==2.181.0
+google-auth==2.40.3
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.2
+googleapis-common-protos==1.70.0
+greenlet==3.2.3
+h11==0.16.0
+h2==4.3.0
+hpack==4.1.0
+httpcore==1.0.9
+httplib2==0.30.0
+httptools==0.6.4
+httpx==0.28.1
+huggingface-hub==0.34.3
+hydra-core==1.3.2
+hyperframe==6.1.0
+idna==3.10
+ImageIO==2.37.2
+imageio-ffmpeg==0.6.0
+img2pdf==0.6.3
+importlib_resources==6.5.2
+indic-transliteration==2.3.75
+internetarchive==5.5.1
+itsdangerous==2.2.0
+Jinja2==3.1.6
+jsonpatch==1.33
+jsonpointer==3.0.0
+kiwisolver==1.4.8
+lxml==6.0.0
+markdown-it-py==4.0.0
+MarkupSafe==3.0.2
+matplotlib==3.10.3
+mdurl==0.1.2
+mediafire==0.6.1
+MouseInfo==0.1.3
+moviepy==2.2.1
+mplcursors==0.6
+mpmath==1.3.0
+mypy_extensions==1.1.0
+networkx==3.3
+num2words==0.5.14
+numpy==2.2.6
+oauthlib==3.3.1
+omegaconf==2.3.0
+opencv-python-headless==4.12.0.88
+openpyxl==3.1.5
+outcome==1.3.0.post0
+packaging==25.0
+pandas==2.3.3
+pdf2docx==0.5.8
+pdf2image==1.17.0
+pefile==2023.2.7
+pikepdf==10.0.2
+pillow==11.3.0
+pinggy==0.0.15
+platformdirs==4.3.8
+ply==3.11
+postgrest==1.1.1
+proglog==0.1.12
+proto-plus==1.26.1
+protobuf==6.31.1
+pyaes==1.6.1
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+PyAutoGUI==0.9.54
+pycparser==2.23
+pydantic==2.11.7
+pydantic-settings==2.10.1
+pydantic_core==2.33.2
+PyGetWindow==0.0.9
+Pygments==2.19.2
+pyinstaller==6.16.0
+pyinstaller-hooks-contrib==2025.9
+PyJWT==2.10.1
+PyMsgBox==1.0.9
+PyMuPDF==1.26.3
+pyparsing==3.2.3
+PyPDF2==3.0.1
+pyperclip==1.9.0
+PyQt5==5.15.11
+PyQt5-Qt5==5.15.2
+PyQt5_sip==12.18.0
+PyRect==0.2.0
+Pyrogram==2.0.106
+PyScreeze==1.0.1
+PySocks==1.7.1
+pytesseract==0.3.13
+python-dateutil==2.9.0.post0
+python-docx==1.2.0
+python-dotenv==1.1.1
+python-multipart==0.0.20
+pytweening==1.2.0
+pytz==2025.2
+pywin32-ctypes==0.2.3
+PyYAML==6.0.2
+qrcode==8.2
+qrcode-artistic==3.0.2
+reactpy==1.1.0
+realtime==2.7.0
+regex==2025.10.23
+reportlab==4.4.3
+requests==2.32.4
+requests-oauthlib==2.0.0
+requests-toolbelt==1.0.0
+rich==14.2.0
+roman==5.1
+rsa==4.9.1
+segno==1.6.6
+selenium==4.39.0
+sentry-sdk==2.34.1
+setuptools==70.2.0
+shellingham==1.5.4
+six==1.17.0
+smmap==5.0.2
+sniffio==1.3.1
+sortedcontainers==2.4.0
+SQLAlchemy==2.0.41
+starlette==0.47.1
+stone==3.3.1
+storage3==0.12.1
+StrEnum==0.4.15
+supabase==2.18.1
+supabase_auth==2.12.3
+supabase_functions==0.10.1
+sympy==1.13.3
+tabulate==0.9.0
+Telethon==1.41.2
+termcolor==3.1.0
+tkcalendar==1.6.1
+tkchart==2.1.8
+toml==0.10.2
+torch==2.7.1+cu118
+torchaudio==2.7.1+cu118
+torchvision==0.22.1+cu118
+tqdm==4.67.1
+trio==0.32.0
+trio-websocket==0.12.2
+ttkbootstrap==1.10.1
+typer==0.20.0
+typing-inspection==0.4.1
+typing_extensions==4.15.0
+tzdata==2025.2
+uritemplate==4.2.0
+urllib3==2.5.0
+uvicorn==0.35.0
+Wand==0.6.13
+wandb==0.21.0
+watchfiles==1.1.0
+webdavclient3==3.14.6
+webdriver-manager==4.0.2
+websocket-client==1.9.0
+websockets==15.0.1
+Werkzeug==3.1.3
+wrapt==2.0.1
+wsproto==1.3.2
+xlrd==2.0.1
+youtube-dl==2021.12.17
+yt-dlp==2025.12.8
+zope.event==6.1
+zope.interface==8.1.1
